--- a/frontend/src/components/molecules/lists/StudentsList/StudentsList.scss
+++ b/frontend/src/components/molecules/lists/StudentsList/StudentsList.scss
@@ -1,12 +1,14 @@
+@import '../../../../styles/colors';
+
 .students-list {
   width: 100%;   
   font-size: medium;
-  color: #525252; 
+  color: $dark-grey; 
   grid-area: students-list;
 
   &__header {
     display: grid;
-    border-bottom: #525252 solid .1rem;
+    border-bottom: $dark-grey solid .1rem;
     padding-bottom: 1rem;
     margin-bottom: 2.5rem;
     text-transform: uppercase;
