--- a/frontend/src/components/pages/admin/CoursesPage/CoursesPage.scss
+++ b/frontend/src/components/pages/admin/CoursesPage/CoursesPage.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles/colors';
 
-.options-lists-page {
+.admin-courses-page {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
