--- a/frontend/src/components/atoms/Loader/Loader.scss
+++ b/frontend/src/components/atoms/Loader/Loader.scss
@@ -1,7 +1,9 @@
+@import '../../../styles/colors';
+
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #0366d6;
+  border-top: 16px solid $blue;
   width: 60px;
   height: 60px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
