--- a/frontend/src/components/molecules/SideNav/SideNav.scss
+++ b/frontend/src/components/molecules/SideNav/SideNav.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/colors';
+
 .side-nav {
   position: -webkit-sticky;
   position: sticky;
@@ -18,7 +20,7 @@
   justify-content: center;
   align-items: center;
   background-color: white;
-  border-right: #c4c4c4 solid .05rem;
+  border-right: $medium-grey solid .05rem;
   height: 100%;
   z-index: 5;
 
@@ -30,7 +32,7 @@
     align-items: center;
     margin: 0;
     gap: 1rem;
-    color: #525252;
+    color: $dark-grey;
     font-size: medium;
     cursor: pointer;
     &:hover {
@@ -47,7 +49,7 @@
 
   &__welcome-message {
     grid-area: welcome-message;
-    color: #525252;
+    color: $dark-grey;
     font-size: medium;
     align-self: center;
     justify-self: center;
@@ -64,14 +66,14 @@
 
   &__copyright {
     grid-area: copyright;
-    color: #c4c4c4;
+    color: $medium-grey;
     text-align: center;
   }
 
 }
 
 .side-nav--collapsed {
-  width: 2.5vw;
+  width: 5rem;
   grid-template-rows: .5fr 2fr .5fr 3fr 1fr .5fr .5fr;
   row-gap: 1rem;
   grid-template-areas: 
