--- a/frontend/src/components/molecules/forms/OptionsListForm/OptionsListForm.scss
+++ b/frontend/src/components/molecules/forms/OptionsListForm/OptionsListForm.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/colors';
+
 .options-list-form {
   display: flex;
   flex-direction: column;
@@ -16,7 +18,7 @@
     gap: .5rem;
     &__title {
     font-size: x-large;
-    color: #525252;
+    color: $dark-grey;
     }
     &__courses {
     display: flex;
