--- a/frontend/src/components/molecules/forms/ResetPasswordForm/ResetPasswordForm.scss
+++ b/frontend/src/components/molecules/forms/ResetPasswordForm/ResetPasswordForm.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/colors';
+
 .reset-password-form {
   
   display: flex;
@@ -14,20 +16,20 @@
   }
 
   &__instructions {
-    color: #525252;
+    color: $dark-grey;
     align-self: flex-start;
     overflow-wrap: break-word;
   }
   
   &__a {
     all: unset;
-    color: #0366d6;
+    color: $blue;
     text-transform: uppercase;
     margin-bottom: .5rem;
     cursor: pointer;
   }
   &__p {
-    color: #525252;
+    color: $dark-grey;
     justify-self: center;
     text-transform: uppercase;
   }
