--- a/frontend/src/components/molecules/forms/UserDataForm/UserDataForm.scss
+++ b/frontend/src/components/molecules/forms/UserDataForm/UserDataForm.scss
@@ -1,8 +1,18 @@
 .user-data-form {
   padding: 1rem;
   &__fields-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    &__grades-container {
+      &__field {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        @media screen and (max-width: 750px) {
+          flex-direction: column;
+        }
+      }
+    }
   }
 }
