--- a/frontend/src/components/molecules/lists/CoursesList/CoursesList.scss
+++ b/frontend/src/components/molecules/lists/CoursesList/CoursesList.scss
@@ -1,14 +1,16 @@
+@import '../../../../styles/colors';
+
 .courses-list {
   width: 100%;   
   display: flex;
   flex-direction: column;
   font-size: medium;
-  color: #525252; 
+  color: $dark-grey; 
   grid-area: accounts-list;
 
   &__header {
     display: grid;
-    border-bottom: #525252 solid .1rem;
+    border-bottom: $dark-grey solid .1rem;
     padding-bottom: 1rem;
     margin-bottom: 2.5rem;
     text-transform: uppercase;
