--- a/frontend/src/components/templates/AuthentificationPage/AuthentificationPage.scss
+++ b/frontend/src/components/templates/AuthentificationPage/AuthentificationPage.scss
@@ -1,15 +1,26 @@
+@import '../../../styles/colors';
+
 .authentification-template {
   height: 100vh;
   display: grid;
   gap: 3rem;
   min-height: 100%;
-  background-color: rgba($color: #0366d6, $alpha: .75);
+  background-color: rgba($color: $blue, $alpha: .75);
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: .25fr 3fr .25fr;
   grid-template-areas: 
     "languages . ."
     ". main ."
     ". . .";
+
+  @media screen and (max-width: 750px) {
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-rows: .25fr 5fr .25fr;
+    grid-template-areas: 
+    ". . ."
+    ". main ."
+    ". . .";
+  }
 
   &__main {
     height: 100%;
@@ -18,11 +29,6 @@
     grid-area: main;
     grid-template-areas: 
       "image-container form-container";
-
-    @media screen and (max-width: 60rem) {
-      grid-template-areas: 
-      "form-container form-container";
-    }
 
     &__image-container {
       grid-area: image-container;
@@ -39,7 +45,7 @@
         width: 100%;
         height: 100%;
       }
-      @media screen and (max-width: 60rem) {
+      @media screen and (max-width: 750px) {
         visibility: hidden;
       }
     }
@@ -52,7 +58,7 @@
       padding: 2.5rem 2.5rem;
       align-items: center;
       justify-content: center;
-      @media screen and (max-width: 60rem) {
+      @media screen and (max-width: 750px) {
         border-radius: 1rem 1rem;
       }
     }
