--- a/frontend/src/components/atoms/InputField/InputField.scss
+++ b/frontend/src/components/atoms/InputField/InputField.scss
@@ -60,6 +60,15 @@ input[type="file"] {
 }
 
 .file-upload {
+  text-transform: uppercase;
+  font-size: small;
+  border-radius: .5rem;
+  margin: .5rem 0 1rem 0;
+  height: 3.5rem;
+  width: 100%;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   font-weight: bold;
@@ -72,7 +81,7 @@ input[type="file"] {
   grid-area: excel-button;
   margin: 0;
   &:hover {
-    color: white;
+    color: $white;
     background-color: $blue;
   }
 }
