--- a/frontend/src/components/pages/admin/OptionsListsPage/OptionsListsPage.scss
+++ b/frontend/src/components/pages/admin/OptionsListsPage/OptionsListsPage.scss
@@ -9,4 +9,10 @@
     font-size: xx-large;
     font-weight: bold;
   }
+
+  &__degree-title {
+    font-size: x-large;
+    font-weight: bold;
+    color: $blue;
+  }
 }
